--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.9"
 services:
   app:
-    container_name: playful-rabbit
+    container_name: carrot
     depends_on:
       - rabbitmq
     build:
