--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,5 +9,15 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
-    - name: building our go servie
-    run: make build
+      - uses: actions/checkout@v2
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.17
+
+      - name: Build
+        run: go build -v ./...
+
+      - name: Test
+        run: go test -v ./...
